fix class "overflow"

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -187,6 +187,7 @@
 
     border: 1px solid $primaryDarkColor;
     border-radius: 5px;
+    transition: all 250ms linear;
 
     @media screen and (max-width: 1024px) {
       width: 136px;
